[package]
name = "shiny-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4"
actix-ws = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
rand = "0.8.5"
base64 = "0.13"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
actix = "0.13.0"
actix-web-actors = "4.1.0"
shiny-rs_derive = { git = "https://github.com/andyquinterom/shiny-rs_derive.git", branch = "master" }
